--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
 		"start": "node app.js"
 	},
 	"dependencies": {
-		"systeminformation": "*",
-		"blessed": "*",
-		"blessed-contrib": "*"
+		"blessed": "^0.1.81",
+		"blessed-contrib": "^4.8.10",
+		"cfenv": "^1.1.0",
+		"ibmiotf": "*",
+		"systeminformation": "*"
 	},
 	"repository": {},
 	"engines": {
